my profile page

--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
     Description profile
   </title>
 </head>
 <body>
   <div class="container">
-    <div class="card">
-  <h1>Hello I'm Haya</h1>
+  <div class="card">
+  <h1>🌻 Hello I'm Haya 🌻</h1>
   <img src="https://avatars.githubusercontent.com/u/134942623?v=4"
   style="width:100px;" class="img-circle">
     <p>
-      I love playing music, travelling, cooking, nature, meditation, yoga and making art
+      I love playing music, cooking, travelling, nature, meditation, yoga and making art ✨
     </p>
+  </div>
+    </div>
     <div id="banner">
     <a href="https://github.com/haya-moon" target="_blank" class="github">My Github</a>
   </div>
   </div>
     <div class="card">
     <h2>
-      Follow me
+      <p>My cooking blog and my band</p>
     </h2>
         <a href="https://www.instagram.com/lemondisc0" target="_blank">
           <i class="fa-brands fa-instagram"></i>
